# SonicKidAI

./: .coverage  .env.example  .env.telegram  .env.twitter  .gitignore  .replit  .replit.agent_activity  .replit.fixed  .replit.workflow.agent_activity_test  .replit.workflow.agent_activity_test.name  .replit.workflow.apify  .replit.workflow.content_scraper  .replit.workflow.deployment  .replit.workflow.deployment.name  .replit.workflow.dexscreener  .replit.workflow.dexscreener.name  .replit.workflow.discord_bot  .replit.workflow.discord_test  .replit.workflow.discord_test.name  .replit.workflow.discord_tweet_handler  .replit.workflow.discord_tweet_handler.name  .replit.workflow.dual-server  .replit.workflow.dual-server.name  .replit.workflow.integrated_twitter  .replit.workflow.integrated_twitter.name  .replit.workflow.openocean_test  .replit.workflow.openocean_test.name  .replit.workflow.price_updater  .replit.workflow.price_updater.name  .replit.workflow.sonic_price  .replit.workflow.sonic_price.name  .replit.workflow.sonic_price_updater  .replit.workflow.sonic_price_updater.name  .replit.workflow.start  .replit.workflow.start.name  .replit.workflow.telegram_bot  .replit.workflow.telegram_bot.name  .replit.workflow.test_eth_simple  .replit.workflow.test_eth_simple.name  .replit.workflow.test_market_analysis  (+128 more)
.replit.workflow/: apify_scraping
agents/: example.json  general.json  market.json  sonic.json  sonic_kid.json
attached_assets/: Pasted--Add-these-new-methods-to-the-SonicKidAgent-class-async-def-generate-trade-update-post-self-tra-1741652131716.txt  Pasted--Browser-Use-home-pagelight-logo-Search-or-ask-Ctrl-K-Github-Twitter-Join-Discord-Docu-1741403341246.txt  Pasted--GET-https-api-dexscreener-com-latest-dex-search-Send-Send-Request-Close-Client-Search-1741055218421.txt  Pasted--My-Discord-server-has-a-channel-e-g-tweets-from-followed-that-contains-tweets-from-people-my-a-1740938211572.txt  Pasted--Overview-Use-Cases-Playground-Get-Started-Blueprints-Multichain-Queries-Agents-LLMs-llm-1743637149493.txt  Pasted--Playwright-browser-on-steroids-import-asyncio-import-gc-import-logging-from-datacla-1741144648078.txt  Pasted--Supported-Chains-The-evm-non-evm-blockchains-supported-on-OpenOcean-EVM-Chains-EVM-Cha-1742946295868.txt  Pasted--Web-Browser-Agent-Examples-Examples-showing-how-to-use-the-WebBrows-1741139087600.txt  Pasted--staticmethod-def-get-lazybear-prompt-str-Generate-custom-prompt-for-LazyBe-1741469633494.txt  Pasted-4-builds-failed-Your-deployment-attempt-had-the-following-errors-Image-size-is-over-the-limit-of--1743604844510.txt  Pasted-API-V4-The-latest-lightning-fast-API-V4-Quote-URL-https-open-api-openocean-finance-v4-chain-1742937244311.txt  Pasted-API-V4-The-latest-lightning-fast-API-V4-Quote-URL-https-open-api-openocean-finance-v4-chain-1743090785921.txt  Pasted-Accounts-Get-S-Balance-for-a-Single-Address-Returns-the-S-balance-of-a-given-address-Copy-htt-1742704825747.txt  Pasted-Agent-Settings-Learn-how-to-configure-the-agent-Overview-The-Agent-class-is-the-core-compone-1741404388582.txt  Pasted-Browser-Profiles-Authenticated-sessions-Anchor-allows-you-to-save-an-existing-browser-state-as-p-1741312786917.txt  Pasted-Browser-Profiles-Authenticated-sessions-Anchor-allows-you-to-save-an-existing-browser-state-as-p-1741314208712.txt  Pasted-Browser-Sessions-Start-Browser-Allocates-a-new-browser-session-for-the-user-with-optional-configu-1741398671119.txt  (+53 more)
client/: index.html
(+241 files in other folders)
